fixed spacing

--- a/CSS.css
+++ b/CSS.css
@@ -10,7 +10,7 @@ body{
 	font-family: Georgia, serif;
 	font-size: 17px;
 	line-height: 27px;
-	width: 700px;
+	width: 650px;
 	margin: 0px auto;
 
 }
